%%{init: {"er": {"nodeSpacing": 45, "rankSpacing": 40, "entityPadding": 10, "minEntityWidth": 80}}}%%
erDiagram
    ingredients ||--o{ ingredient_batches : has
    ingredients ||--o{ stock_movements : has
    ingredients ||--o{ stock_adjustments : has
    ingredients ||--o{ daily_ingredient_usages : has
    ingredients ||--o{ stock_reports : has
    ingredients }o--|| menu_ingredients : "used in"

    ingredient_batches ||--o{ stock_movements : "batch source"

    menus ||--o{ menu_ingredients : uses
    menus ||--o| menu_stocks : "has stock (1:1)"
    menus ||--o{ order_items : contains

    menu_stocks ||--o{ menu_stock_batches : has
    menu_stocks ||--o{ menu_stock_movements : has
    menu_stocks ||--o{ menu_stock_adjustments : has

    menu_stock_batches ||--o{ menu_stock_movements : "batch source"

    orders ||--o{ order_items : contains
    orders ||--o{ payments : has
    orders ||--o{ stock_movements : "transaction source"
    orders ||--o{ menu_stock_movements : "transaction source"

    users ||--o{ orders : "cashier/customer"
    users ||--o{ stock_movements : recorded_by
    users ||--o{ stock_adjustments : reported_by
    users ||--o{ stock_reports : "reported/reviewed"

    categories ||--o{ menus : contains
    cafe_tables ||--o{ orders : "dine-in table"
